removed unneeded JSONArray