@@ -8,7 +8,7 @@ import java.io.InputStream;
 
 public class WikipediaRevisionParser {
     public String parse(InputStream testDataStream) throws IOException {
-        JSONArray result = (JSONArray) JsonPath.read(testDataStream, "$..timestamp");
-        return result.get(0).toString();
+        JSONArray result = JsonPath.read(testDataStream, "$..timestamp");
+        return result.getFirst().toString();
     }
 }
